--- a/.github/fluxos de trabalho/workflows-cypress.yml
+++ b/.github/fluxos de trabalho/workflows-cypress.yml
@@ -1,12 +1,14 @@
 name: Cypress Regression Tests
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
 
   ui-chrome-tests:
     runs-on: ubuntu-latest
-    container: cypress/browsers:node14.17.0-chrome88-ff89
+    container:
+      image: cypress/browsers:node14.17.0-chrome88-ff89
+      options: --user 1001
     strategy:
       fail-fast: false
     steps:
